tdf#127676: avoid flickering in line width popup

Change-Id: Ie69a5b4d33d12316e6fd7e443b92851cffc95b8c
Reviewed-on: https://gerrit.libreoffice.org/79667
Tested-by: Jenkins
Reviewed-by: Xisco Faulí <xiscofauli@libreoffice.org>
(cherry picked from commit 25cc6dcef22e51c1bfa01e8fbed5046439bb1428)
Reviewed-on: https://gerrit.libreoffice.org/79748
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>